Install webpack/Install vue/Added rails views/Added vue components/Added new controller
 On branch view_part
 Changes to be committed:

* Home controller, for main page
	```
	new file:   app/controllers/home_controller.rb
	```
* Few changes for question and review controller
    ```
	modified:   app/controllers/questions_controller.rb
	modified:   app/controllers/reviews_controller.rb
    ```
* Add vue components in rails view
    ```
	new file:   app/javascript/components/Home.vue
	new file:   app/javascript/components/Navigation.vue
	new file:   app/javascript/components/NewQuestion.vue
	new file:   app/javascript/components/NewReview.vue
	new file:   app/javascript/components/Question.vue
	new file:   app/javascript/components/Review.vue
	new file:   app/javascript/packs/application.js
	--------------------------------------------
	new file:   app/views/home/index.html.erb
	modified:   app/views/layouts/application.html.erb
	new file:   app/views/questions/_question.html.erb
	deleted:    app/views/questions/create.html.erb
	modified:   app/views/questions/index.html.erb
	deleted:    app/views/questions/new.html.erb
	new file:   app/views/questions/show.html.erb
	new file:   app/views/reviews/_review.html.erb
	deleted:    app/views/reviews/create.html.erb
	modified:   app/views/reviews/index.html.erb
	deleted:    app/views/reviews/new.html.erb
    ```
* Previously webpack wasn't installed in a propper way, now it's installed with Vue
	```
	modified:   config/routes.rb
	new file:   config/webpack/development.js
	new file:   config/webpack/environment.js
	new file:   config/webpack/loaders/vue.js
	new file:   config/webpack/production.js
	new file:   config/webpack/test.js
	new file:   config/webpacker.yml
	```
* New controller for the main page
	```
	new file:   app/helpers/home_helper.rb
	new file:   spec/controllers/home_controller_spec.rb
	new file:   spec/helpers/home_helper_spec.rb
	new file:   spec/views/home/index.html.erb_spec.rb
	```
* Rest files
	```
	mod

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BbApplyTask</title>
+    <title>🔥BbApplyTask🔥</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <%= yield %>
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+  	<div id='app'>
+      <nav>
+        <navigation></navigation>
+      </nav>
+      <%= yield %>
+    </div>
   </body>
+  <%= javascript_pack_tag 'application' %>
 </html>
