--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Reviews#index</h1>
-<p>Find me in app/views/reviews/index.html.erb</p>
+<new-review></new-review>
+<hr>
+<div class="marged-layout" style="width: 900px; height: auto; margin: auto; text-align: center">
+  <h3>Review list</h3>
+  <%= render @reviews.by_latest %>
+</div>
