Email checking during asking a question. --------------
 On branch change_architec_model
 Changes to be committed:

* Creating of brand new users during asking questions added.
    ```
	modified:   app/controllers/questions_controller.rb
	```
* Email providing mechanism added. And sign out.
	```
	modified:   app/javascript/components/Navigation.vue
	modified:   app/javascript/components/NewQuestion.vue
	modified:   app/javascript/components/Question.vue
	modified:   app/javascript/components/Review.vue
	modified:   app/javascript/packs/application.js
	```
* Added validation of emails for Plain User
	```
	modified:   app/models/admin_user.rb
	modified:   app/models/plain_user.rb
	```
* Errors notificaton on index added.
	```
	modified:   app/views/questions/_question.html.erb
	modified:   app/views/questions/index.html.erb
	modified:   app/views/questions/show.html.erb
	```
* In order of better experience validation error of Question was substitude to error that would be perceived in a more simple way.
	```
	modified:   config/locales/en.yml
	```
* PGI failed to provide foreign_key of parent table to their chealdren tables.
	```
	modified:   db/migrate/20190319091140_create_user.rb
	modified:   db/migrate/20190319091149_add_check_user_id_function.rb
	modified:   db/migrate/20190319144520_devise_create_admin_users.rb
	modified:   db/migrate/20190319144521_create_plain_users.rb
	modified:   db/migrate/20190319144522_create_posts.rb
	modified:   db/migrate/20190319144523_create_reviews.rb
	modified:   db/migrate/20190319144524_create_questions.rb
	modified:   db/migrate/20190319144525_create_replies.rb
	modified:   db/schema.rb
	```
* Rest
	```
	modified:   db/seeds.rb
	modified:   package.json
	modified:   yarn.lock
	```

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -5,5 +5,6 @@
           question="<%=question%>"
           replies="<%=question.replies_amount%>"
           id="<%=question.id%>"
+          show_button="<%=@action_button%>"
          >
 </question>
