Commit after lot of work
 On branch reply_adding
 Changes to be committed:

* Add pages in active admin
	```
	modified:   app/admin/dashboard.rb
	new file:   app/admin/questions.rb
	new file:   app/admin/replies.rb
	```
* Add new controller(reply) and extracting some usefull data from params in question controller
    ```
	modified:   app/controllers/questions_controller.rb
	new file:   app/controllers/replies_controller.rb
    ```
* Add new components
    ```
	modified:   app/javascript/components/NewQuestion.vue
	new file:   app/javascript/components/NewReply.vue
	new file:   app/javascript/components/Reply.vue
	modified:   app/javascript/packs/application.js
    ```
* Add validations, add some biz logic
    ```
	modified:   app/models/admin_user.rb
	modified:   app/models/plain_user.rb
	modified:   app/models/question.rb
	modified:   app/models/reply.rb
	modified:   app/models/review.rb
	```
* Add reply partial and place it in question show
    ```
	modified:   app/views/questions/show.html.erb
	new file:   app/views/replies/_reply.html.erb
	```
* Change admin ( add current_sign_in_at ), add replies amount in question, and active admin comments
    ```
	modified:   db/migrate/20190319144520_devise_create_admin_users.rb
	modified:   db/migrate/20190319144524_create_questions.rb
	modified:   db/migrate/20190319144525_create_replies.rb
	new file:   db/migrate/20190322123136_add_devise_to_admin_users.rb
	new file:   db/migrate/20190322123144_create_active_admin_comments.rb
	```
* Add new tests, models almost fully green/ delete irrelevan files.
    ```
	modified:   spec/controllers/home_controller_spec.rb
	modified:   spec/controllers/questions_controller_spec.rb
	new file:   spec/controllers/replies_controller_spec.rb
	modified:   spec/factories/admin_users.rb
	modified:   spec/factories/plain_users.rb
	deleted:    spec/factories/posts.rb
	modified:   spec/factories/questions.rb
	modified:   spec/factories/replies.rb
	deleted:    spec/factories/users.rb
	new file:  

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,1 +1,8 @@
 <%= render @question, locals: { action_button: false} %>
+<%= render @replies %>
+<hr>
+<new-reply 
+           questionid="<%=@question.id%>" 
+           questionowner="<%=@question.plain_user.email%>">
+</new-reply>
+<hr>
