--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,4 +1,4 @@
-<new-review></new-review>
+<new-review errors="<%= @errors %>"></new-review>
 <hr>
 <div class="marged-layout" style="width: 900px; height: auto; margin: auto; text-align: center">
   <h3>Review list</h3>
