--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -3,7 +3,7 @@
           content="<%=question.content%>"
           date="<%=question.time%>"
           question="<%=question%>"
-          replies="<%=question.replies_amount%>"
+          replies="<%=question.reply_amount%>"
           id="<%=question.id%>"
           show_button="<%=@action_button%>"
          >
